styles/layouts/_timer-bar.scss
.timer-bar {
  z-index: $timer-bar-level;
  height: $timer-bar-height;
  border-bottom: 1px solid $border;
  transition: transform 300ms ease-in-out;
  transform: translate3d(0, -#{$timer-bar-height}, 0);

  &.is-open {
    transform: translate3d(0, 0, 0);
  }

  &-content {
    height: $timer-bar-height;
    padding: 6px 8px;
    overflow-x: auto;
    overflow-y: hidden;

    &::-webkit-scrollbar {
      display: none;
    }
  }

  &-list {
    @include inline-flexbox(start);
    position: relative;
    left: -8px;
  }

  &-item {
    margin-right: 16px;

    &:last-child {
      margin-right: 0;
    }
  }

  @include responsive(D) {
    .timer-bar-content::-webkit-scrollbar {
      display: block;
      height: 4px;
      background-color: $white;
    }

    .timer-bar-content::-webkit-scrollbar-thumb {
      height: 4px;
      background-color: rgba($black, 0.4);
      border-radius: 2px;
    }
  }
}

